# yafowil.widget.dynatree

./: .gitignore  CHANGES.rst  HISTORY.rst  LICENSE.rst  Makefile  README.rst  base.cfg  buildbot.cfg  buildout.cfg  karma.conf.js  mx.ini  package.json  pyproject.toml  rollup.conf.js  setup.py
.github/workflows/: test_js.yaml  test_py.yaml
etc/: base.cfg
js/: rollup.conf.js  wtr.config.mjs
js/src/: widget.js
js/tests/: test_test.js
scripts/: clean.sh  install.sh  karma.sh  rollup.sh  watch.sh
src/yafowil/widget/dynatree/: __init__.py  configure.zcml  example.py  tests.py  widget.py  widget.rst  widget.txt  yafowil.widget.dynatree.js  yafowil.widget.dynatree.js.map  yafowil.widget.dynatree.min.js  yafowil.widget.dynatree.min.js.map
src/yafowil/widget/dynatree/resources/: widget.css  widget.js
src/yafowil/widget/dynatree/resources/jquery.dynatree/skin-bootstrap/: ui.dynatree.css
src/yafowil/widget/dynatree/tests/: test_widget.py
